<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/cnt_mnu_edit"
        android:title="Edit"
        />
    <item
        android:id="@+id/cnt_mnu_delete"
        android:title="Delete"
        />
</menu>