...
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">
                    <ListView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/listViewClients"
                        android:longClickable="true"/>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/Groups"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
...
